--- a/android/sipeng/app/src/main/res/layout/modal_pengaduan.xml
+++ b/android/sipeng/app/src/main/res/layout/modal_pengaduan.xml
@@ -70,6 +70,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
